--- a/Inheritance.html
+++ b/Inheritance.html
@@ -57,7 +57,7 @@ td{
   <button style="width:100px; height:50px;" class="tablinks" onclick="openTab(event, 'Collect')">Collect</button>
   <button style="width:100px; height:50px; visibility:hidden;" class="tablinks" onclick="openTab(event, 'Attributes')" id="unlock1">Attributes</button>
   <button style="width:100px; height:50px; visibility:hidden;" class="tablinks" onclick="openTab(event, 'Artifacts')" id="unlock2">Artifacts</button>
-  <button style="width:100px; height:50px; visibility:hidden;" class="tablinks" onclick="openTab(event, 'Settings')">Settings</button>
+  <button style="width:100px; height:50px;" class="tablinks" onclick="openTab(event, 'Settings')">Settings</button>
 </div>
 
 <div class="tabcontent" id="Collect">
@@ -105,7 +105,7 @@ td{
 <div class="tabcontent" id="Settings">
 
 </div>
-
+<button onclick="start1">Reset All</button>
 <script src="ExpantaNum.js"></script>
 <script>
 function openTab(evt, tabName) {
