--- a/Inheritance.html
+++ b/Inheritance.html
@@ -103,9 +103,8 @@ td{
 </div>
 
 <div class="tabcontent" id="Settings">
-
+<button onclick="start1()">Reset All</button>
 </div>
-<button onclick="start1">Reset All</button>
 <script src="ExpantaNum.js"></script>
 <script>
 function openTab(evt, tabName) {
@@ -454,7 +453,7 @@ function buyDragonScales(){
   calculateArtifact();}
 }
 function start1(){
-counter = 1e1;
+counter = 10;
 gain = 0;
 
 gen1 = 0;
